k8s/violin-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: violin-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: violin
  ports:
    - port: 8080
      targetPort: 8080
